--- a/docs/04.shopping_review.md
+++ b/docs/04.shopping_review.md
@@ -1,1 +1,37 @@
+네, 알겠습니다. 제공해주신 구현 링크(`https://jzzlyghyzzly.github.io/my-mall-app/`)에 접속하여 직접 기능을 확인하고, 고객사 리뷰 문서를 꼼꼼하게 작성하겠습니다.
 
+---
+
+### **쇼핑몰 연동 리뷰**
+
+## 고객사 요구사항
+
+-   **페이지 연동**: 상품 목록, 장바구니 페이지 등 앱의 모든 페이지가 서로 유기적으로 연결되어야 합니다.
+-   **장바구니 기능**: 장바구니에 상품을 담고 수량을 조절하며, 총 금액을 정확하게 계산하는 기능을 구현해야 합니다. 특히 **10만원 이상 구매 시 배송비 무료** 기능을 적용하여 사용자에게 명확히 알리도록 했습니다.
+-   **상품 정보 표시**: 상품의 이미지, 브랜드명, 가격, 상세 설명 등의 정보가 시안에 맞게 표시되어야 합니다.
+-   **동적 UI**: 장바구니에 담긴 상품 개수가 헤더에 실시간으로 표시되어야 합니다.
+-   **수량 조절**: `+`와 `-` 버튼을 통해 상품의 수량을 조절할 수 있습니다. 수량이 0이 되면 상품이 자동으로 삭제됩니다.
+-   **디자인 반영**: 제공된 시안의 레이아웃과 치수 정보를 기반으로 UI/UX를 구현했습니다.
+
+## 요구사항에 따른 기능 동작 확인
+
+1.  **상품 목록 페이지**:
+    * 앱에 접속하면, 6개의 상품이 격자 형태로 깔끔하게 정렬되어 보입니다.
+    * 각 상품 카드에는 이미지, 브랜드명, 가격 정보가 시안대로 표시됩니다.
+    * 상단 헤더에는 장바구니 아이콘과 함께 현재 담긴 상품 개수가 `0`으로 표시됩니다.
+2.  **상품 담기 기능**:
+    * 상품 카드 하단의 '담기' 버튼을 누르면, 버튼의 텍스트가 '담음!'으로 바뀌고 배경색이 밝은 회색으로 변경됩니다. 이와 동시에 헤더의 장바구니 아이콘 옆 숫자가 `1`로 증가하는 것을 볼 수 있습니다.
+    * 2초 후 버튼은 다시 원래 상태('담기', 검정색)로 돌아와, 사용자가 여러 상품을 추가할 수 있게 됩니다.
+3.  **장바구니 페이지**:
+    * 상품 목록 페이지 상단의 장바구니 아이콘을 누르면, 장바구니 페이지로 이동합니다.
+    * 장바구니 페이지에는 방금 담은 상품이 목록으로 나타납니다.
+    * 상품 목록은 `+`, `-` 버튼을 이용해 수량을 조절할 수 있습니다. 수량을 0으로 만들면 해당 상품은 목록에서 자동으로 사라집니다.
+    * **금액 계산**:
+        * 상품 금액, 배송비, 총 금액이 실시간으로 정확하게 계산됩니다.
+        * 총 상품 금액이 10만원 이상이 되면 배송비가 '무료'로 바뀌고, 총 금액이 다시 계산됩니다.
+4.  **레이아웃 및 반응형 디자인**:
+    * 두 페이지 모두 `width: 430px` 기준의 모바일 시안을 따르면서도, 화면 크기에 맞춰 중앙에 정렬되는 반응형 구조로 구현되었습니다.
+    * 장바구니 페이지의 경우, 상품 목록이 길어져도 상단바와 하단의 결제 요약 영역이 화면에 고정되어 있어 사용자가 스크롤 중에도 중요한 정보를 놓치지 않습니다.
+5.  **페이지 이동**:
+    * 장바구니 페이지의 왼쪽 상단 '뒤로 가기' 버튼을 누르면, 상품 목록 페이지로 다시 돌아옵니다.
+    * 장바구니 페이지 하단의 '결제하기' 버튼을 누르면 다음 단계인 결제 페이지로 이동하는 라우트가 설정되어 있습니다.
